--- a/alexandria-balkaran-snaps/src/components/Hero/Hero.scss
+++ b/alexandria-balkaran-snaps/src/components/Hero/Hero.scss
@@ -6,12 +6,18 @@
   @include tablet {
     padding: 3rem 1.5rem;
   }
+  @include desktop {
+    padding: 0 1.5rem;
+  }
   & p {
     @include font-mobile-body;
     padding-bottom: 1rem;
     padding-top: 4rem;
     @include tablet {
       @include font-tablet-body;
+    }
+    @include desktop {
+      padding-top: 0;
     }
   }
   & span {
@@ -21,6 +27,9 @@
     @include font-mobile-title;
     @include tablet {
       @include font-tablet-title;
+    }
+    @include desktop {
+      width: 50%;
     }
   }
 }
